--- a/Introduction to CSS/Introduction-to-CSS-Exercise/Introduction-to-CSS-Exercise/L2_01_Monkeys/Solution/style.css
+++ b/Introduction to CSS/Introduction-to-CSS-Exercise/Introduction-to-CSS-Exercise/L2_01_Monkeys/Solution/style.css
@@ -1,19 +1,57 @@
 body{
     background-color: #FAEBC8;
-    text-align: center;
+    font-family: "Open Sans", sans-serif;
 }
 
+h2{
+    padding-bottom: 10px;
+}
+.center-screen{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
 section{
+   background-color: #ffffff;
    text-align: center;
-   width: 50%;
-   height: 300px;
-   border: 5px solid black;
-   border-radius: 25px;
-   padding: 50px;
+   width: 65%;
+   height: 450px;
+   -webkit-box-shadow: 0px 10px 13px -7px #000000, 4px 3px 46px 19px rgba(197,158,137,255); 
+   box-shadow: 0px 10px 13px -7px #000000, 4px 3px 46px 19px rgba(197,158,137,255);
+   border-radius: 15px;
+   padding: 70px;
 }
 section article{
     display: inline-block;
-    padding: 70px;
+    height: 400px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 60px;
+    width: 22%;
+    text-align: center;
+}
 
-    width: 10%;
+section article p{
+    height: 170px;
+    width: 200px;
+    padding-bottom: 50px;
+    text-align: justify;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+img{
+    width: 80px;
+    height: 80px;
+    padding-bottom: 12px;
+}
+
+.bottom-shadow{
+    text-shadow: 30px 29px 2px rgba(150, 150, 150, 1);
+    color: 
+    #965a50;
+    font-style: italic;
+    font-size: large;
 }
